# clawleash

./: .gitignore  LICENSE  README.ja.md  README.md  README.zh-TW.md  SPEC.md  TRADEMARK.md  llms.txt  package.json
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: fake-permission.sh  install.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: index.html  qr.html  qr.js  toast.css  toast.js
docs/: SETUP.md
docs/superpowers/specs/: 2026-07-02-askuserquestion-remote-answering-design.md
skill/: SKILL.md
src/: config.js  daemon.js  hooks-install.js  mobile.js  netinfo.js  notify.js  permissions.js  status.js
test/: daemon.test.js  notify.test.js  permissions.test.js
